docs(roadmap): log initial C1 progress

--- a/7ul_2013.html
+++ b/7ul_2013.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="css/jquery.countdown.css" type="text/css" media="all" />        
         <!--[if lte IE 7]><link rel="stylesheet" href="./css/ie.css" type="text/css"  media="all" /><![endif]-->
         
-        <script src="../ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <script src="ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery.core.pack.js"></script>
         <script type="text/javascript" src="js/jquery.pngfix.pack.js"></script>
         <script type="text/javascript" src="js/jquery.disqus.js"></script>
@@ -32,7 +32,7 @@
         
         <script type="text/javascript" src="js/lightbox.js"></script>
         <script type="text/javascript" src="js/jquery.lwtCountdown-0.9.5.js"></script>
-        <script type="text/javascript" src="../jwpsrv.com/library/8nceFA8aEeOsXyIACusDuQ.js"></script>
+        <script type="text/javascript" src="jwpsrv.com/library/8nceFA8aEeOsXyIACusDuQ.js"></script>
         <script type="text/javascript" src="js/jquery.countdown.js"></script>
 
         <meta name="MSSmartTagsPreventParsing" content="true" />
@@ -358,7 +358,7 @@ var gr_goal_params = {
  param_4 : '',
  param_5 : ''
 };</script>
-<script type="text/javascript" src="../app.getresponse.com/goals_loga256.html?p=131605&amp;u=JAZj"></script>
+<script type="text/javascript" src="app.getresponse.com/goals_loga256.html?p=131605&amp;u=JAZj"></script>
 
 <!-- BEGIN JIVOSITE CODE {literal} -->
 <script type='text/javascript'>
@@ -428,7 +428,7 @@ window.onload = function(){
 </script>
 
 <script language="JavaScript" type="text/javascript"> var my_hop_host = 's.nlping.ru'; </script>
-<script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
+<script language="JavaScript" type="text/javascript" src="s.nlping.ru/jsapi/click.js"></script>
 
 <!-- äîáàâèòü ìåòêè ê ññûëêàì -->
 <script>
