--- a/print8d4e.html
+++ b/print8d4e.html
@@ -34,7 +34,7 @@ var gr_goal_params = {
  param_4 : '',
  param_5 : ''
 };</script>
-<script type="text/javascript" src="../app.getresponse.com/goals_loga256.html?p=131605&amp;u=JAZj"></script>
+<script type="text/javascript" src="app.getresponse.com/goals_loga256.html?p=131605&amp;u=JAZj"></script>
 
 <!-- BEGIN JIVOSITE CODE {literal} -->
 <script type='text/javascript'>
@@ -104,7 +104,7 @@ window.onload = function(){
 </script>
 
 <script language="JavaScript" type="text/javascript"> var my_hop_host = 's.nlping.ru'; </script>
-<script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
+<script language="JavaScript" type="text/javascript" src="s.nlping.ru/jsapi/click.js"></script>
 
 <!-- äîáàâèòü ìåòêè ê ññûëêàì -->
 <script>
