feat(structure): move p redirect to root

--- a/webinar.nlping.ru/index.html
+++ b/webinar.nlping.ru/index.html
@@ -131,7 +131,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "lightbox2": { "rtl": "0", "fi
   
   <div class="content">
     <p>В группах размещаются материалы для участников тренингов и владельцев специальных пакетов.<br />
-<a href="../nlping.ru/p/indexc1c8.html?id=showcase">Подробнее о наших продуктах</a>.</p>
+<a href="../p/indexc1c8.html?id=showcase">Подробнее о наших продуктах</a>.</p>
   </div>
 
   
