--- a/webinar.nlping.ru/contact.html
+++ b/webinar.nlping.ru/contact.html
@@ -167,7 +167,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "lightbox2": { "rtl": "0", "fi
 
   
   <div class="content">
-    <p>&copy; 2010-2072&nbsp;<a href="../nlping.ru/index.html" target="_blank">nlping.ru</a>. <a href="contact.html">Контакты</a> </p>
+    <p>&copy; 2010-2072&nbsp;<a href="../index.html" target="_blank">nlping.ru</a>. <a href="contact.html">Контакты</a> </p>
 <script type="text/javascript" language="JavaScript" src="../reformal.ru/tab5d0b.html?title=%C2%E5%E1%E8%ED%E0%F0%FB+NLPING.ru&amp;domain=webinar&amp;color=FFA000&amp;align=right&amp;charset=utf-8&amp;ltitle=&amp;lfont=&amp;lsize=&amp;waction=2&amp;regime=0"></script>
   </div>
 
