--- a/w.nlping.ru/nlp-master/index.html
+++ b/w.nlping.ru/nlp-master/index.html
@@ -21,7 +21,7 @@
 <link rel="alternate" type="application/rss+xml" title="НЛП для руководителей &raquo; Лента комментариев" href="../comments/feed/index.html" />
 <script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-<script type="text/javascript" src="../../nlping.ru/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="../../js/jquery.cookie.js"></script>
 <script type='text/javascript' src='../../trener.pro/scripts/scripts.html'></script>
 
 <link rel="stylesheet" type="text/css" href="../../trener.pro/scripts/tooltipster/css/tooltipster.html" />
