--- a/print00af.html
+++ b/print00af.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ïðîäàâåö ñ÷àñòüÿ</title>
+<title>Продавец счастья</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F475C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:37 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='ñ÷àñòüå'>
-<meta name="description" content='Ïðèò÷à ïðî ñ÷àñòüå. Íåñìîòðÿ íà þìîð, î÷åíü æèçíåííî ;)'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='счастье'>
+<meta name="description" content='Притча про счастье. Несмотря на юмор, очень жизненно ;)'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,37 +14,37 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ïðîäàâåö ñ÷àñòüÿ</h1><a href=index00af.html?id=F475C class=slink>web-âåðñèÿ</a><p><span class='print'><p>Çäðàâñòâóéòå. Âû ñ÷àñòüå ïðîäàåòå?<br />
-- Äà.<br />
-- Õì. À ñêàæèòå, âîò ñêîëüêî ñòîèò íàïðèìåð 5 ìèíóò ñ÷àñòüÿ?<br />
-- Ïîëæèçíè.<br />
-- Íèôèãàñå, êàê äîðîãî! À ñêîëüêî æ òîãäà 3 äíÿ ìîãóò ñòîèòü?<br />
-- Ïîëæèçíè.<br />
-- À òðè ìåøêà?<br />
--&nbsp;Äà áåç ðàçíèöû. Ïîëæèçíè ñòîèò ñ÷àñòüå.<br />
-- Òî åñòü ÿ ìîãó âçÿòü&nbsp;ñêîëüêî çàõî÷ó íà ñâîè ïîëæèçíè?<br />
-- Äà, ñêîëüêî ñìîæåòå.<br />
-- Õì. À â ÷åì ïðèêîë?<br />
-- Äà íè â ÷åì. Áåðèòå ñêîëüêî âëåçåò. Âîí â óãëó ìåøêè ñòîÿò.  Ñêîëüêî&nbsp;âîçüìåòå - âñå âàøå.<br />
-- ×åðò! À ÷òî æ îíî ó âàñ òàêîå òÿæåëîå-òî?!<br />
-- Íå òÿæåëîå, à òðóäíîå. Ïîïðîáóéòå, âîí òîò ñëåâà, òàì ïîëåã÷å.<br />
-- ÛÛÛÛÛÛ...&nbsp;Íåò. Íå ïîäûìó ïîæàëóé...<br />
-- Âû íå íàäðûâàéòåñü. Âîçüìèòå ñêîëüêî ñìîæåòå.<br />
-- Õì. À êàê ïîíÿòü ñêîëüêî ñìîãó?<br />
-- À âû ïîíåìíîæêó íà÷íèòå. Âîçüìèòå ñíà÷àëà 5 ìèíóò. Âûäåðæèòå, ïîòîì  10. È òàê äàëåå. Íå òîðîïèòåñü. Ìíîãèå ñðàçó íå ìîãóò.<br />
-- À âû ïîòîì åùå äàäèòå?<br />
-- Êîíå÷íî. Çà âàøè ïîëæèçíè âû ìîæåòå âçÿòü ñêîëüêî óãîäíî ñ÷àñòüÿ.  Ñêîëüêî âàì áóäåò ïî ñèëàì. Ìîæåòå ïîïîçæå åùå çàéòè.<br />
-- È âû åùå äàäèòå?<br />
-- Ãîñïîäè, äà êîíå÷íî. ×òî íàì, ñ÷àñòüÿ æàëêî ÷òî ëè? Âû âîçüìèòå  ñåé÷àñ íåìíîæå÷êî. Ïîõîäèòå ïðèâûêíèòå, çàéäåòå åùå. Ñðàçó-òî îíî  íåïðèâû÷íî êîíå÷íî. Ó âàñ âîí êàêàÿ äóøåâíàÿ ìóñêóëàòóðà äðÿáëàÿ, êóäà  âàì ñðàçó ìíîãî-òî? À òàê ïîäêà÷àåòå ïîñòåïåííî è ñ êàæäûì ðàçîì ñìîæåòå  âñå áîëüøå.<br />
-- Ñïàñèáî. Íó ÿ ïîéäó?<br />
-- Äî ñâèäàíüÿ.<br />
-- Ìîæíî åùå ãëóïûé âîïðîñ íàïîñëåäîê?<br />
-- Ìîæíî ïîäóìàòü îñòàëüíûå áûëè óìíûå. Âàëÿéòå.<br />
-- À ïî÷åìó òàêàÿ ñòðàííàÿ öåíà: ïîëæèçíè?<br />
-- Ýòî íå öåíà. Ýòî ñåáåñòîèìîñòü.</p>
-<p style="text-align: right;"><em>Âçÿòî ó </em><span style="white-space: nowrap;" lj:user="juli_from_b" class="ljuser
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Продавец счастья</h1><a href=index00af.html?id=F475C class=slink>web-версия</a><p><span class='print'><p>Здравствуйте. Вы счастье продаете?<br />
+- Да.<br />
+- Хм. А скажите, вот сколько стоит например 5 минут счастья?<br />
+- Полжизни.<br />
+- Нифигасе, как дорого! А сколько ж тогда 3 дня могут стоить?<br />
+- Полжизни.<br />
+- А три мешка?<br />
+-&nbsp;Да без разницы. Полжизни стоит счастье.<br />
+- То есть я могу взять&nbsp;сколько захочу на свои полжизни?<br />
+- Да, сколько сможете.<br />
+- Хм. А в чем прикол?<br />
+- Да ни в чем. Берите сколько влезет. Вон в углу мешки стоят.  Сколько&nbsp;возьмете - все ваше.<br />
+- Черт! А что ж оно у вас такое тяжелое-то?!<br />
+- Не тяжелое, а трудное. Попробуйте, вон тот слева, там полегче.<br />
+- ЫЫЫЫЫЫ...&nbsp;Нет. Не подыму пожалуй...<br />
+- Вы не надрывайтесь. Возьмите сколько сможете.<br />
+- Хм. А как понять сколько смогу?<br />
+- А вы понемножку начните. Возьмите сначала 5 минут. Выдержите, потом  10. И так далее. Не торопитесь. Многие сразу не могут.<br />
+- А вы потом еще дадите?<br />
+- Конечно. За ваши полжизни вы можете взять сколько угодно счастья.  Сколько вам будет по силам. Можете попозже еще зайти.<br />
+- И вы еще дадите?<br />
+- Господи, да конечно. Что нам, счастья жалко что ли? Вы возьмите  сейчас немножечко. Походите привыкните, зайдете еще. Сразу-то оно  непривычно конечно. У вас вон какая душевная мускулатура дряблая, куда  вам сразу много-то? А так подкачаете постепенно и с каждым разом сможете  все больше.<br />
+- Спасибо. Ну я пойду?<br />
+- До свиданья.<br />
+- Можно еще глупый вопрос напоследок?<br />
+- Можно подумать остальные были умные. Валяйте.<br />
+- А почему такая странная цена: полжизни?<br />
+- Это не цена. Это себестоимость.</p>
+<p style="text-align: right;"><em>Взято у </em><span style="white-space: nowrap;" lj:user="juli_from_b" class="ljuser
 ljuser-name_juli_from_b"><a href="http://juli-from-b.livejournal.com/profile"><em><img width="17" height="17" style="vertical-align: bottom; border: 0pt none; padding-right: 1px;" src="../l-stat.livejournal.net/img/userinfo.gif" class="ContextualPopup" alt="[info]" /></em></a><a href="http://juli-from-b.livejournal.com/"><em>juli_from_b</em></a></span></p>
-<p style="text-align: right;"><span style="font-size: smaller;"><em>Îïóáëèêîâàíî íà nlping.ru 18.03.2010</em></span></p>
+<p style="text-align: right;"><span style="font-size: smaller;"><em>Опубликовано на nlping.ru 18.03.2010</em></span></p>
 <p style="text-align: center;"><span class="service"><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -67,16 +67,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup5ed9.html?id=F475C&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupb43f.html?id=F475C&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup57f6.html?id=F475C&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup58a6.html?id=F475C&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0bc4.html?id=F475C&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5ed9.html?id=F475C&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupb43f.html?id=F475C&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup57f6.html?id=F475C&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup58a6.html?id=F475C&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0bc4.html?id=F475C&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -99,12 +99,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Áàéêè è ïðèò÷è&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='ÍËÏåðñêàÿ áàéêà.'>Ñàìàÿ âêóñíàÿ êîíôåòà</a></li><li><a href='F47A4.html' title='Ñêàçêà äëÿ âçðîñëûõ ïðî íè÷åãî-íå-íåäåëàíèå è ñìûñë.'>Ïðèò÷à "Ãîâîðÿùàÿ ðûáà"</a></li><li><a href='F479F.html' title='Ìíîãèå èç íàñ õîòÿò íà÷àòü ÷òî-òî íîâîå, íî íå ìíîãèå ýòî äåëàþò. Ïî÷åìó? Ïîòîìó ÷òî ìû ïðèâûêëè ê òîìó ÷òî èìååì, êàêèì áû îíî íè áûëî. È ïðè ìûñëè îá èçìåíåíèÿõ ó ìíîãèõ èç íàñ ïîÿâëÿåòñÿ ñòðàõ... '>Ïðèâû÷êè, ñòðàõè è óñïåõ</a></li><li><a href='F471C.html' title='Ïðèò÷à îò Íèëà Äîíàëüäà Óîëøà ïðî òî, êàê âàæíî ïîìíèòü, êòî ìû...'>Ìàëåíüêàÿ äóøà è ñîëíöå</a></li><li><a href='8DBBC4B9-F45F5-CE624629.html' title='Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.'>Õîðîøåå è ïëîõîå</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Байки и притчи&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='НЛПерская байка.'>Самая вкусная конфета</a></li><li><a href='F47A4.html' title='Сказка для взрослых про ничего-не-неделание и смысл.'>Притча "Говорящая рыба"</a></li><li><a href='F479F.html' title='Многие из нас хотят начать что-то новое, но не многие это делают. Почему? Потому что мы привыкли к тому что имеем, каким бы оно ни было. И при мысли об изменениях у многих из нас появляется страх... '>Привычки, страхи и успех</a></li><li><a href='F471C.html' title='Притча от Нила Дональда Уолша про то, как важно помнить, кто мы...'>Маленькая душа и солнце</a></li><li><a href='8DBBC4B9-F45F5-CE624629.html' title='Притча из сборника 101 история дзен.'>Хорошее и плохое</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F475C" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -127,13 +127,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </span></p>
-</span><p><a href=index00af.html?id=F475C class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index00af.html?id=F475C class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -194,7 +194,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -216,7 +216,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
