--- a/print02d6.html
+++ b/print02d6.html
@@ -2,7 +2,7 @@
 <title> Статья "Как решать психологические задачи самостоятельно?" Часть 2</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DFC by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:14 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Я расскажу, как устроен механизм трансформации проблем в нашем разуме, используя который мы можем решать эти проблемы самостоятельно.
 Не все, конечно. Только те, о которых я писал в прошлом письме (конфликты или негативные состояния). Но это 99% всех психологических проблем или их причин.
