--- a/print06c6.html
+++ b/print06c6.html
@@ -1,9 +1,9 @@
 <html>
-<title>Ãëàâíàÿ îøèáêà òðåíåðîâ</title>
+<title>Главная ошибка тренеров</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AFA by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:30 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Ãëàâíàÿ îøèáêà òðåíåðîâ'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Главная ошибка тренеров'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,38 +14,38 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ãëàâíàÿ îøèáêà òðåíåðîâ</h1><a href=index06c6.html?id=F4AFA class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Главная ошибка тренеров</h1><a href=index06c6.html?id=F4AFA class=slink>web-версия</a><p><span class='print'><p>
 	&nbsp;</p>
 <p class="p3" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Êîëëåãè, äàâàéòå âçãëÿíåì ïðàâäå â ãëàçà.</span></span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Коллеги, давайте взглянем правде в глаза.</span></span></p>
 <h3 style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); font-weight: normal; font-style: italic; line-height: 12px; ">
-	Ãäå íà ñàìîì äåëå çàêàí÷èâàåòñÿ ïóòü ñòàæåðà?</h3>
+	Где на самом деле заканчивается путь стажера?</h3>
 <p class="p3" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Áîëüøèíñòâî òðåíåðîâ âåäóò íå ñâîè ñîáñòâåííûå ïðîãðàììû, à òå, êîòîðûì îíè êîãäà-òî ãäå-òî íàó÷èëèñü. Íà ðîñò èçâåñòíîñòè è ãîíîðàðà òóò ðàññ÷èòûâàòü íå ïðèõîäèòñÿ. Ïîòîìó ÷òî ïîêà ó òðåíåðà íåò ñîáñòâåííîé ïðîãðàììû, åãî íè÷òî íå âûäåëÿåò, è îí ïðîñòî ñëèâàåòñÿ ñ òîëïîé òàêèõ æå âåäóùèõ òî æå ñàìîå... Ýòîò âàðèàíò õîðîø òîëüêî ïîêà Âû ó÷èòåñü ðàáîòàòü ñ ãðóïïîé è íà óïðàâëåíèå ñîäåðæàíèåì ó Âàñ åùå íå õâàòàåò âíèìàíèÿ. Êàê òîëüêî ýòî íàâûê âçÿò, íå ñòîèò áîëüøå òåðÿòü âðåìÿ, íóæíî èäòè äàëüøå.</span></span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Большинство тренеров ведут не свои собственные программы, а те, которым они когда-то где-то научились. На рост известности и гонорара тут рассчитывать не приходится. Потому что пока у тренера нет собственной программы, его ничто не выделяет, и он просто сливается с толпой таких же ведущих то же самое... Этот вариант хорош только пока Вы учитесь работать с группой и на управление содержанием у Вас еще не хватает внимания. Как только это навык взят, не стоит больше терять время, нужно идти дальше.</span></span></p>
 <h3 style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); font-weight: normal; font-style: italic; line-height: 12px; ">
-	Ãëàâíàÿ îøèáêà íà÷èíàþùåãî òðåíåðà</h3>
+	Главная ошибка начинающего тренера</h3>
 <p class="p3" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Òå òðåíåðû, êòî ïîøåë äàëüøå, èìåþò îäèí-äâà ñâîèõ àâòîðñêèõ òðåíèíãà. Îòëè÷íî!&nbsp;</span><span style="border-style: initial; border-color: initial; font-size: 14px; background-color: rgb(255, 255, 255); ">Íî êîãäà âñå, êòî ìîã ñõîäèòü íà ýòîò òðåíèíã íà íåãî ñõîäèëè, íà÷èíàåòñÿ ïåðèîä ñïàäà&hellip;&nbsp;</span>È òåïåðü îíè òðàòÿò ìàññó óñèëèé íà òî, ÷òîáû ïðîäàâàòü ýòîò òðåíèíã ñíîâà è ñíîâà. Ïðîñòî ïîòîìó ÷òî áîëüøå èì ïðîâîäèòü íå÷åãî. À òàê êàê òðåíåðû íå ìàðêåòîëîãè, îíè íå äîãàäûâàþòñÿ, ÷òî ïðîäàæà ïåðâîãî òðåíèíãà çàáèðàåò â 5 ðàç áîëüøå óñèëèé, ÷åì ïðîäàæà êàæäîãî ñëåäóþùåãî. È íå âèäÿò, íàñêîëüêî ñèëüíî òîðìîçèò èõ ðàçâèòèå îòñóòñòâèå àññîðòèìåíòà. &nbsp;</span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Те тренеры, кто пошел дальше, имеют один-два своих авторских тренинга. Отлично!&nbsp;</span><span style="border-style: initial; border-color: initial; font-size: 14px; background-color: rgb(255, 255, 255); ">Но когда все, кто мог сходить на этот тренинг на него сходили, начинается период спада&hellip;&nbsp;</span>И теперь они тратят массу усилий на то, чтобы продавать этот тренинг снова и снова. Просто потому что больше им проводить нечего. А так как тренеры не маркетологи, они не догадываются, что продажа первого тренинга забирает в 5 раз больше усилий, чем продажа каждого следующего. И не видят, насколько сильно тормозит их развитие отсутствие ассортимента. &nbsp;</span></p>
 <h3 style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); font-weight: normal; font-style: italic; line-height: 12px; ">
-	Âòîðàÿ îøèáêà òðåíåðà, ñ÷èòàþùåãî ñåáÿ ïðîôè</h3>
+	Вторая ошибка тренера, считающего себя профи</h3>
 <p class="p3" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Òå, êòî èìååò áîëüøå ôàíòàçèè, ãîâîðÿò, ÷òî ãîòîâû ñîçäàòü ëþáîé òðåíèíã ïîä çàêàç. Âîò òîëüêî çàêàçû ïî÷åìó-òî íå ñûïÿòñÿ ëàâèíîé... Ïðàâèëüíî! Êîãäà ëþäè õîòÿò ðåøèòü êàêóþ-òî çàäà÷ó, îíè íå èùóò òðåíåðà, êîòîðûé ñîçäàñò èì òðåíèíã äëÿ ðåøåíèÿ ýòîé çàäà÷è. Îíè èùóò òðåíèíã, ðåøàþùèé ýòó çàäà÷ó, êîòîðûé óæå ãäå-òî ñòîèò â ðàñïèñàíèè. Ëþäè íå çíàþò, ÷òî Âû ìîæåòå, äî òåõ ïîð, ïîêà Âû íå ðàññêàæåòå èì îá ýòîì. À åñëè ãîâîðèòü ÿçûêîì îðãàíèçàòîðà - áåç ïðîãðàìì Âàøèõ òðåíèíãîâ&nbsp;</span>ãîâîðèòü íå î ÷åì.</span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Те, кто имеет больше фантазии, говорят, что готовы создать любой тренинг под заказ. Вот только заказы почему-то не сыпятся лавиной... Правильно! Когда люди хотят решить какую-то задачу, они не ищут тренера, который создаст им тренинг для решения этой задачи. Они ищут тренинг, решающий эту задачу, который уже где-то стоит в расписании. Люди не знают, что Вы можете, до тех пор, пока Вы не расскажете им об этом. А если говорить языком организатора - без программ Ваших тренингов&nbsp;</span>говорить не о чем.</span></p>
 <h3 style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); font-weight: normal; font-style: italic; line-height: 12px; ">
-	<span class="s1" style="border-style: initial; border-color: initial; font-size: 17px; ">×òî îòëè÷àåò ðåàëüíûõ ïðîôè?</span></h3>
+	<span class="s1" style="border-style: initial; border-color: initial; font-size: 17px; ">Что отличает реальных профи?</span></h3>
 <p class="p3" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; ">Äà, åñòü òðåíåðû, ÷üè èìåíà ó âñåõ íà ñëóõó. Ê íèì ïåðå÷èñëåííûå ïðîáëåìû íå îòíîñÿòñÿ. Íî ïî÷åìó èõ èìåíà ó âñåõ íà ñëóõó? Ïîòîìó ÷òî ó íèõ åñòü ñâîé àâòîðñêèé áåñòñåëëåð - òðåíèíã, ïî êîòîðîìó èõ óçíàþò. È åùå ïàðà ïà÷åê äðóãèõ òðåíèíãîâ ;) Äà, åùå êíèãè, ïóáëèêàöèè è âñå òàêîå... Íî ýòî äåëî íàæèâíîå. Êàê êàðòèíà äåëàåò õóäîæíèêà, à êíèãà - ïèñàòåëÿ, òàê è òðåíåðà äåëàåò åãî àâòîðñêèé òðåíèíã-áåñòñåëëåð. Óíèêàëüíûé è óçíàâàåìûé. È ñ ýòîãî ìîìåíòà íà÷èíàåòñÿ ïðîôåññèîíàëüíàÿ ÷àñòü åãî êàðüåðû.</span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; ">Да, есть тренеры, чьи имена у всех на слуху. К ним перечисленные проблемы не относятся. Но почему их имена у всех на слуху? Потому что у них есть свой авторский бестселлер - тренинг, по которому их узнают. И еще пара пачек других тренингов ;) Да, еще книги, публикации и все такое... Но это дело наживное. Как картина делает художника, а книга - писателя, так и тренера делает его авторский тренинг-бестселлер. Уникальный и узнаваемый. И с этого момента начинается профессиональная часть его карьеры.</span></p>
 <p class="p3" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Õîòèòå âîéòè â ðÿäû ïðîôè è áûñòðî ñòàòü èçâåñòíûì? Ñîçäàéòå òðåíèíã-âèçèòíóþ êàðòî÷êó è àññîðòèìåíò èç 4-õ ïðîãðàìì. Îñòàëüíîå äåëî òåõíèêè.</span></span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Хотите войти в ряды профи и быстро стать известным? Создайте тренинг-визитную карточку и ассортимент из 4-х программ. Остальное дело техники.</span></span></p>
 <p class="p1" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
 	&nbsp;</p>
 <h1 style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); font-weight: normal; ">
-	<span class="s1" style="border-style: initial; border-color: initial; font-size: 24px; ">Ïðèíöèï ñóïåðìàðêåòà</span></h1>
+	<span class="s1" style="border-style: initial; border-color: initial; font-size: 24px; ">Принцип супермаркета</span></h1>
 <p class="p1" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Áîëüøèíñòâî òðåíåðîâ - íå ìàðêåòîëîãè. Ïîýòîìó îíè íå âèäÿò îäíîé ïðîñòîé, íî î÷åíü âàæíîé äëÿ îðãàíèçàòîðà âåùè: ëèíåéêó òðåíèíãîâ&nbsp;</span></span><span style="border-style: initial; border-color: initial; font-size: 14px; background-color: rgb(255, 255, 255); ">(àññîðòèìåíò)</span><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">&nbsp;ïðîäàâàòü çíà÷èòåëüíî ëåã÷å, ÷åì îäèí-äâà òðåíèíãà. Ïðè óñëîâèè, êîíå÷íî, ÷òî îíà ïðåäíàçíà÷åíà äëÿ îäíîé êîíêðåòíîé</span><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">&nbsp;àóäèòîðèè.&nbsp;</span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Большинство тренеров - не маркетологи. Поэтому они не видят одной простой, но очень важной для организатора вещи: линейку тренингов&nbsp;</span></span><span style="border-style: initial; border-color: initial; font-size: 14px; background-color: rgb(255, 255, 255); ">(ассортимент)</span><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">&nbsp;продавать значительно легче, чем один-два тренинга. При условии, конечно, что она предназначена для одной конкретной</span><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">&nbsp;аудитории.&nbsp;</span></p>
 <p class="p1" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Ïî÷åìó? Ïîòîìó ÷òî ñëîæíåå âñåãî ïðîäàòü ïåðâûé òðåíèíã (êîãäà òðåíåð åùå íå èçâåñòåí àóäèòîðèè îðãàíèçàòîðà). Íî êîãäà ëþäè ïðîøëè Âàø òðåíèíã è îñòàëèñü äîâîëüíû - îíè êóïèëè Âàñ, êàê òðåíåðà. È èì&nbsp;</span><span class="s2" style="border-style: initial; border-color: initial; font-size: 14px; ">óæå&nbsp;<strike style="border-style: initial; border-color: initial; font-size: 14px; ">íàìíîãî ïðîùå ðåøèòüñÿ</strike></span><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">&nbsp;ñòàíîâÿòñÿ èíòåðåñíû è äðóãèå Âàøè òðåíèíãè.&nbsp;</span></span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">Почему? Потому что сложнее всего продать первый тренинг (когда тренер еще не известен аудитории организатора). Но когда люди прошли Ваш тренинг и остались довольны - они купили Вас, как тренера. И им&nbsp;</span><span class="s2" style="border-style: initial; border-color: initial; font-size: 14px; ">уже&nbsp;<strike style="border-style: initial; border-color: initial; font-size: 14px; ">намного проще решиться</strike></span><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">&nbsp;становятся интересны и другие Ваши тренинги.&nbsp;</span></span></p>
 <p class="p1" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
-	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">...À åñëè Âû óæå èçâåñòíû è ëþáèìû â ñâîèõ êðóãàõ, òî òåì áîëåå! Ëþäè óæå æäóò Âàøèõ íîâûõ ïðîãðàìì, äàéòå èì òîëüêî ïîâîä ïðèéòè ê âàì ñíîâà.</span></span></p>
+	<span style="border-style: initial; border-color: initial; font-size: 14px; "><span class="s1" style="border-style: initial; border-color: initial; font-size: 14px; ">...А если Вы уже известны и любимы в своих кругах, то тем более! Люди уже ждут Ваших новых программ, дайте им только повод прийти к вам снова.</span></span></p>
 <p class="p1" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
 	&nbsp;</p>
 <p class="p1" style="border-style: initial; border-color: initial; background-color: rgb(255, 255, 255); text-indent: 0px; ">
@@ -117,22 +117,22 @@ var idcomments_post_url = 'F4AFA.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4AFA" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script>&nbsp;</strong></p>
-</span><p><a href=index06c6.html?id=F4AFA class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index06c6.html?id=F4AFA class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -193,7 +193,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -215,7 +215,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
