--- a/print086b.html
+++ b/print086b.html
@@ -1,10 +1,10 @@
 <html>
-<title>Êîó÷èíã</title>
+<title>Коучинг</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=D4B82833-F4612-39FD98B1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:56:37 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='êîó÷èíã'>
-<meta name="description" content='Ìàòåðèàëû î êîó÷èíãå è èñïîëüçîâàíèè ÍËÏ â íåì.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='коучинг'>
+<meta name="description" content='Материалы о коучинге и использовании НЛП в нем.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êîó÷èíã</h1><a href=index086b.html?id=D4B82833-F4612-39FD98B1 class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='AA9E9174-F4613-7D3087C4.html'>×òî òàêîå êîó÷èíã</a></h2>...â äâóõ ñëîâàõ.</li><li><h2><a href='80CE685C-F4614-5D368325.html'>Êîó÷èíã. Ñòàäèè  ðàçâèòèÿ.</a></h2>Êðàòêàÿ èñòîðèÿ ðàçâèòèÿ êîó÷èíãà.</li><li><h2><a href='F487A.html'>Âñå äåëî â êîó÷-ïîçèöèè</a></h2>×òî äåëàåò êîó÷èíã ñòîëü ýôôåêòèâíûì èíñòðóìåíòîì, è êàê ýòî ðàáîòàåò?</li></ul></span><p><a href=index086b.html?id=D4B82833-F4612-39FD98B1 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Коучинг</h1><a href=index086b.html?id=D4B82833-F4612-39FD98B1 class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='AA9E9174-F4613-7D3087C4.html'>Что такое коучинг</a></h2>...в двух словах.</li><li><h2><a href='80CE685C-F4614-5D368325.html'>Коучинг. Стадии  развития.</a></h2>Краткая история развития коучинга.</li><li><h2><a href='F487A.html'>Все дело в коуч-позиции</a></h2>Что делает коучинг столь эффективным инструментом, и как это работает?</li></ul></span><p><a href=index086b.html?id=D4B82833-F4612-39FD98B1 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -81,7 +81,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
