--- a/print0cb2.html
+++ b/print0cb2.html
@@ -2,7 +2,7 @@
 <title>Год бессознательного</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C3FA609E-F45CC-294F72F4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='бессознательное'>
 <meta name="description" content='Как используется бессознательное в принятии решений. Психологические исследования Дейкстергюйса.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
