--- a/print0ec9.html
+++ b/print0ec9.html
@@ -2,7 +2,7 @@
 <title>Все дело в коуч-позиции</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F487A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Что делает коучинг столь эффективным инструментом, и как это работает?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
