--- a/print01e0.html
+++ b/print01e0.html
@@ -2,7 +2,7 @@
 <title>Управление контекстом или основы высокоуровневой манипуляции</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A773C58A-F42DB-A1730E4E by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Как устанавливать правила.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
