--- a/print04cd.html
+++ b/print04cd.html
@@ -2,7 +2,7 @@
 <title>Привычки, страхи и успех</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F479F by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:37 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Многие из нас хотят начать что-то новое, но не многие это делают. Почему? Потому что мы привыкли к тому что имеем, каким бы оно ни было. И при мысли об изменениях у многих из нас появляется страх... '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
