--- a/print0769.html
+++ b/print0769.html
@@ -1,10 +1,10 @@
 <html>
-<title>Îá ÍËÏ</title>
+<title>Об НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=BA3E7055-F4370-FE61C781 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Ñòàòüè î ñàìîì ÍËÏ è åãî êîíöåïöèÿõ.'>
+<meta name="description" content='Статьи о самом НЛП и его концепциях.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Îá ÍËÏ</h1><a href=index0769.html?id=BA3E7055-F4370-FE61C781 class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='7420CED6-F461C-B2368737.html'>ÍËÏ - ýòî ïðî ÷òî?</a></h2>ÍËÏ - ýòî íå ïðî ìàíèïóëÿöèþ, íå ïðî ïñèõîòåðàïèþ è äàæå íå ïðî ýôôåêòèâíóþ êîììóíèêàöèþ... È â òî æå âðåìÿ ïðî âñå ýòî âìåñòå è êîå ÷òî åùå.</li><li><h2><a href='02CAC148-F4242-2F439DD8.html'>×òî òàêîå NLP</a></h2>...ñ ðàçíûõ òî÷åê çðåíèÿ.</li><li><h2><a href='3C969702-F4372-49385C8D.html'>Èñòîðèÿ âîçíèêíîâåíèÿ ÍËÏ</a></h2>Êàê çàðîæäàëîñü ÍËÏ, êàêîâû åãî ïåðâîèñòî÷íèêè è áàçîâûå ìîäåëè. Ïî÷åìó ó ÍËÏ òàê ìíîãî îáùåãî ñ ãèïíîçîì.</li><li><h2><a href='22AC6A6A-F45CB-4CFC4CD1.html'>Èñòîðèÿ ðàçâèòèÿ ÍËÏ</a></h2>Èñòîðèÿ ðàçâèòèÿ ÍËÏ è ïîÿâèâøèõñÿ èç íåãî íàïðàâëåíèé.</li><li><h2><a href='C2412340-F42DC-7EB7C073.html'>Äçýí ÍËÏ, èëè ÷òî â îñíîâå?</a></h2>Îñíîâîïîëàãàþùèå ïðèíöèïû ÍËÏ.</li><li><h2><a href='98E74A53-F4627-A8CA1A4D.html'>Òðåòüå ïîêîëåíèå ÍËÏ</a></h2>Ïðî òðè ïîêîëåíèÿ ÍËÏ.</li><li><h2><a href='41141A62-F44A3-E49A15E7.html'>Ïðèíåñòè ñâåò â òåìíîòó: Ïðèíöèï ïîçèòèâíîãî íàìåðåíèÿ</a></h2>Ðîáåðò Äèëòñ îá îäíîì èç îñíîâíûõ ïðèíöèïîâ ÍËÏ.</li><li><h2><a href='8CF62ECC-F4603-E0E60912.html'>Çà÷åì ëþäÿì ÍËÏ?</a></h2>Äåéñòâèòåëüíî, çà÷åì ëþäÿì íóæíî ÍËÏ? ...Èëè íàóêà 7-ãî óðîâíÿ.</li><li><h2><a href='40C147DD-F461B-B427EF74.html'>Èíòåðâüþ ñ Äæîíîì Ãðèíäåðîì è Ôðýíêîì Ïüþñåëèêîì î âîçíèêíîâåíèè ÍËÏ</a></h2>Ñîçäàòåëè  ÍËÏ ðàññêàçûâàþò, êàê âñå íà÷èíàëîñü.</li><li><h2><a href='F483A.html'>Ñëîâàðü òåðìèíîâ ÍËÏ</a></h2>Íàèáîëåå àäåêâàòíûé ñëîâàðü òåðìèíîâ ÍËÏ, êîòîðûé ÿ íàøåë â ñåòè.</li></ul></span><p><a href=index0769.html?id=BA3E7055-F4370-FE61C781 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Об НЛП</h1><a href=index0769.html?id=BA3E7055-F4370-FE61C781 class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='7420CED6-F461C-B2368737.html'>НЛП - это про что?</a></h2>НЛП - это не про манипуляцию, не про психотерапию и даже не про эффективную коммуникацию... И в то же время про все это вместе и кое что еще.</li><li><h2><a href='02CAC148-F4242-2F439DD8.html'>Что такое NLP</a></h2>...с разных точек зрения.</li><li><h2><a href='3C969702-F4372-49385C8D.html'>История возникновения НЛП</a></h2>Как зарождалось НЛП, каковы его первоисточники и базовые модели. Почему у НЛП так много общего с гипнозом.</li><li><h2><a href='22AC6A6A-F45CB-4CFC4CD1.html'>История развития НЛП</a></h2>История развития НЛП и появившихся из него направлений.</li><li><h2><a href='C2412340-F42DC-7EB7C073.html'>Дзэн НЛП, или что в основе?</a></h2>Основополагающие принципы НЛП.</li><li><h2><a href='98E74A53-F4627-A8CA1A4D.html'>Третье поколение НЛП</a></h2>Про три поколения НЛП.</li><li><h2><a href='41141A62-F44A3-E49A15E7.html'>Принести свет в темноту: Принцип позитивного намерения</a></h2>Роберт Дилтс об одном из основных принципов НЛП.</li><li><h2><a href='8CF62ECC-F4603-E0E60912.html'>Зачем людям НЛП?</a></h2>Действительно, зачем людям нужно НЛП? ...Или наука 7-го уровня.</li><li><h2><a href='40C147DD-F461B-B427EF74.html'>Интервью с Джоном Гриндером и Фрэнком Пьюселиком о возникновении НЛП</a></h2>Создатели  НЛП рассказывают, как все начиналось.</li><li><h2><a href='F483A.html'>Словарь терминов НЛП</a></h2>Наиболее адекватный словарь терминов НЛП, который я нашел в сети.</li></ul></span><p><a href=index0769.html?id=BA3E7055-F4370-FE61C781 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -81,7 +81,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
