--- a/print0a49.html
+++ b/print0a49.html
@@ -2,7 +2,7 @@
 <title>Код Спиральной Динамики. Интервью с доктором Доном Беком.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A3C1C587-F460A-E4D97F48 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Интервью.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
