--- a/print0ab5.html
+++ b/print0ab5.html
@@ -2,7 +2,7 @@
 <title>НЛП и гипноз</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8A456F4F-F4241-F9B6E5D2 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:55:53 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп, гипноз'>
 <meta name="description" content='Статьи, техники и др. материалы по НЛП и DHE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
