--- a/print0b0d.html
+++ b/print0b0d.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñèñòåìíàÿ ðàáîòà ñ öåëÿìè</title>
+<title>Системная работа с целями</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=6F89F2F7-F465B-94CE3C07 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:06:57 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íëï'>
-<meta name="description" content='Òåõíèêè ñèñòåìíîé ðàáîòû ñ öåëÿìè ñ èñïîëüçîâàíèåì ïàòòåðíîâ ÍËÏ è ãèïíîçà.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='нлп'>
+<meta name="description" content='Техники системной работы с целями с использованием паттернов НЛП и гипноза.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñèñòåìíàÿ ðàáîòà ñ öåëÿìè</h1><a href=index0b0d.html?id=6F89F2F7-F465B-94CE3C07 class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='EE42B048-F466C-394CC55A.html'>Ìåòîä Îïòèìèçàöèè Ñèñòåìíûõ Êîììóíèêàöèé (ÌÎÑÊ)</a></h2>Ïîøàãîâàÿ èíñòðóêöèÿ îïòèìèçàöèè ñèñòåìû.</li><li><h2><a href='C46664D1-F45AF-434EA0C4.html'>Ìåòà-ñèñòåìíûå óðîâíè äëÿ ðåàëèçàöèè öåëåé</a></h2>Øàãè òåõíèêè.</li><li><h2><a href='EF55077A-F45BC-9F9EDC1A.html'>Ìåòà-ñèñòåìíîå âèäåíèå</a></h2>Øàãè òåõíèêè.</li></ul></span><p><a href=index0b0d.html?id=6F89F2F7-F465B-94CE3C07 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Системная работа с целями</h1><a href=index0b0d.html?id=6F89F2F7-F465B-94CE3C07 class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='EE42B048-F466C-394CC55A.html'>Метод Оптимизации Системных Коммуникаций (МОСК)</a></h2>Пошаговая инструкция оптимизации системы.</li><li><h2><a href='C46664D1-F45AF-434EA0C4.html'>Мета-системные уровни для реализации целей</a></h2>Шаги техники.</li><li><h2><a href='EF55077A-F45BC-9F9EDC1A.html'>Мета-системное видение</a></h2>Шаги техники.</li></ul></span><p><a href=index0b0d.html?id=6F89F2F7-F465B-94CE3C07 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -81,7 +81,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
