--- a/print0bec.html
+++ b/print0bec.html
@@ -2,7 +2,7 @@
 <title>Третье поколение НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=98E74A53-F4627-A8CA1A4D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Про три поколения НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
