--- a/print0e16.html
+++ b/print0e16.html
@@ -2,7 +2,7 @@
 <title>Блог</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=blog by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:54:15 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
